Closed Bug 98384 Opened 24 years ago Closed 24 years ago

CCK built N6.1 does not install additional components (java, realplayer, winamp, etc.) correctly

Categories

(CCK Graveyard :: CCK-Wizard, defect)

x86
All
defect
Not set
major

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: BarrettLndstrm, Assigned: shrutiv)

Details

(Whiteboard: nsbranch+)

Attachments

(1 file)

When installing a CCK built N6.1, the additional components don't install properly. To reproduce: Use CCK to build a customized installer making sure that Sun Java 2, realplayer, and winamp are included in the installer. After the installer is built, install it on any windows machine. Make sure to choose "Custom" installation to verify that the components are selected. After the installation of the browser, the components will attempt to install. A small window will appear with this text (in the case of java): "Configuring Sun Java 2. Please wait....". A winzip window will open up with the component in it, and do nothing. You must manually run the file in the winzip window to install the components. Then the winzip window must be manually closed for the installer to continue on.
QA to me
QA Contact: blee → barrettl
Status: NEW → ASSIGNED
Whiteboard: nsbranch+
Whiteboard: nsbranch+ → nsbranch+ need r=
Comment on attachment 50011 [details] [diff] [review] Patch to install additional components r=tao
Marking fixed.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Whiteboard: nsbranch+ need r= → nsbranch+
Verified Fix on CCK build 2001-09-24-07
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: