Fix for bug 98384: CCK built N6.1 does not install additional components (java, realplayer, winamp, etc.) correctly (r=tao)