cck/ib/ib.cpp
@@ -804,8 +804,10 @@ void invisible()
 				WritePrivateProfileString(Components[i].compname, "Attributes", "SELECTED|ADDITIONAL", iniDstPath);
 			else if (!(Components[i].disabled) && !(Components[i].additional) && !(Components[i].invisible))
 				WritePrivateProfileString(Components[i].compname, "Attributes", "SELECTED|FORCE_UPGRADE", iniDstPath);
-			else if (Components[i].additional && Components[i].launchapp && !(Components[i].invisible))
-				WritePrivateProfileString(Components[i].compname, "Attributes", "SELECTED|LAUNCHAPP|ADDITIONAL", iniDstPath);
+			else if (Components[i].additional && Components[i].launchapp && 
+				Components[i].uncompress && !(Components[i].invisible))
+				WritePrivateProfileString(Components[i].compname, "Attributes",
+				"SELECTED|UNCOMPRESS|LAUNCHAPP|ADDITIONAL", iniDstPath);
 			componentOrder++;
 		}
 		else
